--- a/components/Layout/Header.module.css
+++ b/components/Layout/Header.module.css
@@ -1,21 +1,27 @@
-
-/*===============
-shorts cuts 
-================= */
-
-.flex {
+.header {
 	display: flex;
-}
-
-.flex__sb {
-	justify-content: space-between;
-}
-
-.flex__col {
 	flex-direction: column;
 }
-/*===============
-================= */
-.header {
-	background-color: aquamarine;
+.nav {
+	background-color: #67CECC;
+	height: 44px;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 4px;
+}
+.hero {
+	width: 100%;
+	height: 112px;
+}
+.category {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 10px;
+}
+
+.category__title {
+	font-size: 18px;
+	font-weight: bold;
+	color: #67CECC;
 }
