--- a/components/Layout/Main.module.css
+++ b/components/Layout/Main.module.css
@@ -13,8 +13,7 @@
 .flex__col {
 	flex-direction: column;
 }
-.btn {
-}
+
 /*=====================
    layout   
   =====================*/
@@ -57,27 +56,37 @@
 	background: #f2a359;
 	border-radius: 4px;
 	padding: 0.25em 1.5em;
+	align-self: flex-start;
 	/* price button text */
 	font-weight: 600;
 	font-size: 10px;
 	line-height: 12px;
-	border: 3px solid red;
+	cursor: pointer;
+	border: none;
 }
 
 .card_img {
 	order: 1;
-	/* position: static;
-	width: 75px;
-	height: 75px;
-	left: 4px;
-	top: 4px;
+}
 
-	border-radius: 4px; */
-
-	/* Inside auto layout */
-	/* 
-	flex: none;
-	order: 0;
-	flex-grow: 0;
-	margin: 0px 4px; */
+.card_count {
+	margin-left: auto;
+	margin-right: 10px;
+	align-self: center;
+	order: 3;
+}
+.card_counting {
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 19px;
+}
+.card_count_draw {
+	background: #fcfcfc;
+	border: 2px solid #67cecc;
+	border-radius: 50%;
+	width: 24px;
+	height: 24px;
+	text-align: center;
+	margin-left: 8px;
+	margin-right: 8px;
 }
