--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 *::before {
 	box-sizing: border-box;
 	padding: 0;
-	margin: 0;
+	margin: 0 auto;
 }
 
 /*=====================
@@ -83,8 +83,8 @@ footer {
 	border-radius: 10px;
 	padding: 0.5em 1em;
 	margin: 1em auto;
+	justify-content: center;
 	align-items: center;
-	justify-content: space-between;
 	position: fixed;
 	bottom: 0;
 	margin-bottom: 0;
