--- a/components/Layout/Footer.module.css
+++ b/components/Layout/Footer.module.css
@@ -22,6 +22,8 @@
 	width: 24px;
 	height: 24px;
 	text-align: center;
+
+	margin-left: 7em;
 }
 .footer__count {
 	font-size: 12px;
@@ -30,12 +32,12 @@
 	line-height: 22px;
 }
 .footer__price {
-	margin: 0 1em;
+	margin: 0 0.25em;
 	font-size: 18px;
 	font-family: var(--ff-primary);
 	font-weight: var(--fw-600);
 	line-height: 22px;
 }
 .footer__cart {
-	margin-right: 1em;
+	margin-right: 7em;
 }
