--- a/components/item/Header.module.css
+++ b/components/item/Header.module.css
@@ -1,3 +1,22 @@
+/*=====================
+   Short Cuts  
+  =====================*/
+
+.flex {
+	display: flex;
+}
+
+.flex__sb {
+	justify-content: space-between;
+}
+
+.flex__col {
+	flex-direction: column;
+}
+/*=====================
+   layout   
+  =====================*/
+
 .card {
 	margin: 3em;
 	background-color: #fcfcfc;
@@ -5,11 +24,87 @@
 
 .header {
 }
+.Image {
+	background-image: url('/images/x.png');
+}
+
+.card_body {
+	margin: 1em;
+}
 
 .card_info {
+	margin-bottom: 1em;
+}
+.card_title {
+	width: 270px;
+}
+
+.card_description {
+}
+.card_price {
+	display: inline-block;
+	text-decoration: none;
+	background: #f2a359;
+	border-radius: 4px;
+	padding: 8px 16px;
+	align-self: flex-start;
+	/* price button text */
+	font-weight: 600;
+	font-size: 10px;
+	line-height: 12px;
+	cursor: pointer;
+	border: none;
 }
 
 .card_details {
+	padding: 1em;
 	background: #f6f7f7;
 	border-radius: 8px;
+	width: 364px;
+	height: 239px;
+}
+.card_details_group {
+	margin-bottom: 1em;
+}
+
+.card_details_group2 {
+	margin-bottom: 1em;
+}
+
+.message {
+}
+
+.textarea {
+	margin-top: ;
+	width: 100%;
+	height: 53px;
+	border: none;
+	border-radius: 4px;
+	background-color: white;
+	font-size: 16px;
+	resize: none;
+}
+
+.card_count {
+	margin-left: 9em;
+}
+.card_counting {
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 19px;
+}
+.card_count_draw {
+	background: #fcfcfc;
+	border: 2px solid #67cecc;
+	border-radius: 50%;
+	width: 24px;
+	height: 24px;
+	text-align: center;
+	margin-left: 8px;
+	margin-right: 8px;
+}
+
+.addToCart {
+	margin-top: 1em;
+	background-color: #f2a359;
 }
