--- a/components/Layout/Header.module.css
+++ b/components/Layout/Header.module.css
@@ -77,25 +77,52 @@
 	color: var(--fc-white);
 }
 
-/* 
-.header {
-	display: flex;
-	flex-direction: column;
-}
+/* hamburger menu */
 
-.hero {
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
-	height: 112px;
-}
-.category {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0 10px;
+	height: 100%;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.35s, visibility 0.35s, height 0.35s;
+	overflow: hidden;
+	background: black;
+	z-index: -1;
 }
 
-.category__title {
-	font-size: 18px;
-	font-weight: bold;
-	color: #67cecc;
-} */
+.hamburger-menu {
+	width: 50px;
+	height: 50px;
+	display: block;
+	border: none;
+	padding: 0px;
+	margin: 20px;
+	background: linear-gradient(
+		to bottom,
+		#3d0e61,
+		#3d0e61 20%,
+		white 20%,
+		white 40%,
+		#3d0e61 40%,
+		#3d0e61 60%,
+		white 60%,
+		white 80%,
+		#3d0e61 80%,
+		#3d0e61 100%
+	);
+}
+
+.hamburger-menu .sidebar-menu {
+	visibilty: hidden;
+	position: fixed;
+	top: 0;
+	left: -250px;
+	width: 200px;
+	height: 100%;
+	background-color: #3d0e61;
+	padding: 0px 10px;
+	box-sizing: border-box;
+}
