--- a/components/Checkout/Payment.module.css
+++ b/components/Checkout/Payment.module.css
@@ -91,18 +91,22 @@
 .actions {
 	margin-top: 1rem;
 	text-align: center;
+	width: 100%;
+	padding: 0.5rem 1.5rem;
+	background-color: var(--clr-action);
+	display: flex;
+	border-radius: 5px;
 }
 
 .actions button {
-	width: 100%;
 	font: inherit;
 	cursor: pointer;
-	background-color: var(--clr-action);
-	color: white;
-	padding: 0.5rem 1.5rem;
 	border: none;
 	border-radius: 4px;
 	font-weight: bold;
+	color: white;
+	background-color: var(--clr-action);
+	margin-right: auto;
 }
 
 .actions button:hover,
