--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@
   =====================*/
 body {
 	font-family: var(--ff-primary);
-	background-color: #e5e5e5;
+	background-color: #E5E5E5;
 	margin: 0 auto;
 }
 
