--- a/components/Checkout/Payment.module.css
+++ b/components/Checkout/Payment.module.css
@@ -20,30 +20,36 @@
 .title {
 	width: 428px;
 	height: 44px;
-	margin-top: 5em;
+	margin-top: 1em;
 }
 .info {
 	padding-bottom: 0.25em;
 	border-bottom: 1px solid #38afad;
 	margin-bottom: 1.25em;
 }
-.Payment {
-	width: 100%;
-	flex-direction: column;
-}
+
 .section {
 	width: 100%;
 	margin-bottom: 1em;
 	display: flex;
-	justify-content: space-between;
 }
 
+.section_text {
+	margin-left: 0;
+}
+.section_price {
+	margin-right: 0;
+}
+
+.section h1 {
+	font-size: var(--fs-subtitle);
+}
 .price {
 	margin-bottom: 1em;
 }
 
 .Section_specialRequest {
-	margin-top: 5em;
+	margin-top: 1em;
 }
 
 .specialRequest_textarea {
@@ -54,7 +60,7 @@
 	box-sizing: border-box;
 	border: none;
 	border-radius: 4px;
-	background-color: #f8f8f8;
+	background-color: var(--clr-textarea);
 	font-size: 12px;
 	resize: none;
 }
@@ -66,6 +72,8 @@
 .form {
 	padding: 1rem;
 	margin-top: 0.25em;
+	font-family: var(--ff-primary);
+	font-weight: var(--fw-600);
 }
 
 .control {
@@ -78,37 +86,42 @@
 	margin-bottom: 0.5rem;
 }
 
-.control input,
-.control textarea {
+.control input {
+	height: 36px;
 	display: block;
 	font: inherit;
+	background-color: var(--clr-input);
 	border-radius: 4px;
-	border: 1px solid #ccc;
-	padding: 0.25rem;
+	border: none;
 	width: 100%;
+	padding-left: 2em;
 }
 
 .actions {
 	margin-top: 1rem;
+	height: 68px;
 	text-align: center;
 	width: 100%;
-	padding: 0.5rem 1.5rem;
 	background-color: var(--clr-action);
 	display: flex;
 	border-radius: 5px;
 }
 
 .actions button {
-	font: inherit;
+	font-size: var(--fs-subtitle);
 	cursor: pointer;
 	border: none;
 	border-radius: 4px;
 	font-weight: bold;
 	color: white;
 	background-color: var(--clr-action);
-	margin-right: auto;
+	margin-left: 7em;
 }
 
+.Image {
+	margin-top: 1em;
+	margin-right: 6em;
+}
 .actions button:hover,
 .actions button:active {
 	background-color: #da9022; /* Green */
