--- a/components/userSignIn/SignInForm.module.css
+++ b/components/userSignIn/SignInForm.module.css
@@ -1,11 +1,13 @@
 /* form */
 .card {
-	background-color: white;
 	width: 428px;
+	background-color: white;
 }
 .form {
 	padding: 1rem;
-	margin-top: 0.25em;
+	font-weight: var(--fw-600);
+	font-size: 10px;
+	background-color: #f6f7f7;
 }
 
 .card_title {
@@ -25,13 +27,16 @@
 
 .control input,
 .control textarea {
+	height: 36px;
 	display: block;
 	font: inherit;
 	border-radius: 4px;
 	border: 1px solid #ccc;
 	padding: 0.25rem;
 	width: 100%;
-	background-color: #f2f1f1;
+	background-color: white;
+	border: none;
+	padding-left: 4em;
 }
 
 .actions {
@@ -42,6 +47,7 @@
 .actions button {
 	width: 100%;
 	font: inherit;
+	height: 42px;
 	cursor: pointer;
 	background-color: var(--clr-action);
 	color: white;
@@ -49,10 +55,21 @@
 	border: none;
 	border-radius: 4px;
 	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 1em;
+}
+input.placeholder::placeholder {
+	color: black;
 }
 
 .actions button:hover,
 .actions button:active {
 	background-color: #da9022; /* Green */
 	color: white;
+}
+
+.actions_password {
+	text-decoration: underline;
+	font-size: 12px;
+	font-weight: var(--fw-600);
 }
