--- a/components/userSignup/SignupForm.module.css
+++ b/components/userSignup/SignupForm.module.css
@@ -6,6 +6,8 @@
 .form {
 	padding: 1rem;
 	margin-top: 0.25em;
+	font-weight: var(--fw-600);
+	font-size: 10px;
 }
 
 .card_title {
@@ -25,6 +27,7 @@
 
 .control input,
 .control textarea {
+	height: 36px;
 	display: block;
 	font: inherit;
 	border-radius: 4px;
@@ -32,6 +35,8 @@
 	padding: 0.25rem;
 	width: 100%;
 	background-color: #f2f1f1;
+	border: none;
+	padding-left: 4em;
 }
 
 .actions {
@@ -45,12 +50,17 @@
 	cursor: pointer;
 	background-color: var(--clr-action);
 	color: white;
-	padding: 0.5rem 1.5rem;
+	padding: 10px;
 	border: none;
 	border-radius: 4px;
 	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 1em;
+	height: 42px;
 }
-
+input.placeholder::placeholder {
+	color: black;
+}
 .actions button:hover,
 .actions button:active {
 	background-color: #da9022; /* Green */
