sign page is 95% done, add func to x button

--- a/components/userSignIn/SignInForm.module.css
+++ b/components/userSignIn/SignInForm.module.css
@@ -25,6 +25,13 @@
 	margin-bottom: 0.5rem;
 }
 
+.control_icon {
+	position: relative;
+	top: 30px;
+	z-index: 100;
+	margin-left: 1.5em;
+}
+
 .control input,
 .control textarea {
 	height: 36px;
