--- a/components/Checkout/ShoppingCart.module.css
+++ b/components/Checkout/ShoppingCart.module.css
@@ -22,6 +22,7 @@
 }
 
 .ShoppingCart_title {
+	margin-top: 1em;
 	padding-bottom: 0.25em;
 	border-bottom: 1px solid #38afad;
 	margin-bottom: 1.25em;
