--- a/components/userSignup/SignupForm.module.css
+++ b/components/userSignup/SignupForm.module.css
@@ -8,6 +8,7 @@
 	margin-top: 0.25em;
 	font-weight: var(--fw-600);
 	font-size: 10px;
+	background-color: #f6f7f7;
 }
 
 .card_title {
@@ -16,13 +17,21 @@
 }
 
 .control {
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.5em;
 }
 
 .control label {
+	position: relative;
 	display: block;
 	font-weight: bold;
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.5em;
+}
+
+.control_icon {
+	position: relative;
+	top: 30px;
+	z-index: 100;
+	margin-left: 1.5em;
 }
 
 .control input,
@@ -34,7 +43,7 @@
 	border: 1px solid #ccc;
 	padding: 0.25rem;
 	width: 100%;
-	background-color: #f2f1f1;
+	background-color: white;
 	border: none;
 	padding-left: 4em;
 }
