--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,7 +55,7 @@
   =====================*/
 body {
 	font-family: var(--ff-primary);
-	background-color: #f6f7f7;
+	background-color: white;
 	margin: 0 auto;
 }
 
@@ -83,8 +83,7 @@ h3 {
 p {
 	font-size: var(--fs-p);
 }
-header {
-}
+
 
 li {
 	list-style: none;
