--- a/components/Checkout/ShoppingCart.module.css
+++ b/components/Checkout/ShoppingCart.module.css
@@ -35,6 +35,7 @@
 	margin-bottom: 1em;
 	padding: 8px;
 	display: flex;
+	width: 95%;
 }
 
 .card_info {
@@ -60,6 +61,7 @@
 	line-height: 12px;
 	cursor: pointer;
 	border: none;
+	color: black;
 }
 
 .card_img {
