--- a/components/Item/AddItem.module.css
+++ b/components/Item/AddItem.module.css
@@ -1,13 +1,16 @@
 .flex {
 	display: flex;
 }
+
+.flex_column {
+	flex-direction: column;
+}
+
 .card {
 	position: fixed;
 	z-index: 10000;
-	top: 10vh;
-	left:10vw;
-	right: 10vw;
-	width: 80%;
+	bottom: 0;
+	width: 100%;
 	height: 80%;
 	background-color: #fcfcfc;
 }
@@ -16,7 +19,6 @@
 	margin-left: auto;
 	margin-right: 10px;
 	align-self: center;
-	order: 3;
 }
 .card_counting {
 	font-size: 16px;
@@ -35,10 +37,43 @@
 }
 
 .add {
-	background-color: #67cecc;
-	border-radius: 5px;
+	width: 100%;
+	height: 40px;
+	background-color: #F2A359;
 	margin-top: 10px;
 	color: #fcfcfc;
-	text-align: center;
 	cursor: pointer;
+	font-size: 18px;
+	font-family: var(--ff-primary);
+	font-weight: var(--fw-600);
+	line-height: 22px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.AddItem {
+	margin-right: 0;
+}
+
+.cart {
+	margin-left: 10px;
+}
+
+.card_price {
+	margin-top: 16px;
+	display: inline-block;
+	text-decoration: none;
+	background: #f2a359;
+	border-radius: 4px;
+	padding: 4px 8px;
+	align-self: flex-start;
+	/* price button text */
+	font-family: var(--ff-primary);
+	font-weight: 600;
+	font-size: 10px;
+	color: #FCFCFC;
+	line-height: 12px;
+	letter-spacing: 0.08em;
+	border: none;
 }
