--- a/components/Item/AddItem.module.css
+++ b/components/Item/AddItem.module.css
@@ -2,8 +2,18 @@
 	display: flex;
 }
 
+.flex_center {
+	align-items: center;
+}
+
 .flex_column {
 	flex-direction: column;
+}
+
+.add_margin {
+	margin-top: 12px;
+	margin-left: 16px;
+	cursor: pointer;
 }
 
 .card {
@@ -15,11 +25,102 @@
 	background-color: #fcfcfc;
 }
 
-.card_count {
-	margin-left: auto;
-	margin-right: 10px;
-	align-self: center;
+.extra {
+	width: 100%;
 }
+
+.extra_name {
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 24px;
+	color: #181919;
+	margin-left: 16px;
+	margin-top: 16px;
+}
+
+.extra_combain {
+	align-items: flex-end;
+}
+
+.extra_description {
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 14px;
+	color: #5F6666;
+	margin-left: 16px;
+}
+
+.extra_price {
+	margin-top: 16px;
+	display: inline-block;
+	text-decoration: none;
+	background: #f2a359;
+	border-radius: 4px;
+	padding: 8px 16px;
+	align-self: flex-start;
+	/* price button text */
+	font-family: var(--ff-primary);
+	font-weight: 600;
+	font-size: 10px;
+	color: #FCFCFC;
+	line-height: 12px;
+	letter-spacing: 0.08em;
+	border: none;
+}
+
+.extra_extras {
+	background: #F6F7F7;
+	border-radius: 8px;
+	width: 100%;
+	margin-left: 16px;
+	margin-right: 16px;
+	margin-top: 9px;
+	margin-bottom: 9px;
+	padding: 16px;
+}
+
+.extra_cat {
+	font-size: 12px;
+	font-weight: 600;
+	line-height: 14px;
+	color: #181919;
+	margin-bottom: 8px;
+}
+
+.extra_label {
+	font-size: 10px;
+	font-weight: 400;
+	line-height: 12px;
+	letter-spacing: 2%;
+	color: #909797;
+	margin-left: 10px;
+}
+
+.extra_input {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.extra_message {
+	margin-top: 16px;
+}
+
+.extra_textarea {
+	margin-top: 7px;
+	margin-bottom: 16px;
+	border: 1px solid #E6E6E6;
+	border-radius: 4px;
+	padding: 8px;
+	width: 332px;
+	height: 54px;
+	resize: none;
+}
+
+.card_count {
+	align-self: center;
+	margin-top: auto;
+}
+
 .card_counting {
 	font-size: 16px;
 	font-weight: 700;
@@ -29,18 +130,19 @@
 	background: #fcfcfc;
 	border: 2px solid #67cecc;
 	border-radius: 50%;
-	width: 24px;
-	height: 24px;
-	text-align: center;
+	width: 32px;
+	height: 32px;
 	margin-left: 8px;
 	margin-right: 8px;
+	display: flex;
+	align-items: center;
 }
 
 .add {
 	width: 100%;
 	height: 40px;
 	background-color: #F2A359;
-	margin-top: 10px;
+	margin-top: 15px;
 	color: #fcfcfc;
 	cursor: pointer;
 	font-size: 18px;
@@ -60,20 +162,4 @@
 	margin-left: 10px;
 }
 
-.card_price {
-	margin-top: 16px;
-	display: inline-block;
-	text-decoration: none;
-	background: #f2a359;
-	border-radius: 4px;
-	padding: 4px 8px;
-	align-self: flex-start;
-	/* price button text */
-	font-family: var(--ff-primary);
-	font-weight: 600;
-	font-size: 10px;
-	color: #FCFCFC;
-	line-height: 12px;
-	letter-spacing: 0.08em;
-	border: none;
-}
+
