--- a/components/Layout/Footer.module.css
+++ b/components/Layout/Footer.module.css
@@ -6,10 +6,14 @@
 	display: flex;
 	width: 95%;
 	align-items: center;
-	margin-top: 14px;
+	position: fixed;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, 0);
 }
 
-.flex__sb {
+.add_margin_top {
+	margin-top: 60px;
 }
 
 .flex__col {
