--- a/components/AdminPanel/DashBoard.module.css
+++ b/components/AdminPanel/DashBoard.module.css
@@ -18,7 +18,7 @@
    layout   
   =====================*/
 .Layout {
-	width: 1240px;
+	width: 100%;
 	background-color: #f5f6fa;
 }
 /*=====================
